Add PerceiverActorCritic model and update integration test
- Add PerceiverActorCritic model with grid-aware encoder
- Add transformer utilities (attention, perceiver blocks, RoPE)
- Update test_env_model_integration.py to use stochastic action sampling
- Add model-driven rollout demo to test_env.ipynb
- Update .gitignore to exclude data/ and notebook GIFs
- Improve environment and test scripts

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ MANIFEST
 # Virtual environments
 venv/
 .venv/
-env/
 ENV/
 env.bak/
 venv.bak/
@@ -70,6 +69,9 @@ dmypy.json
 *.safetensors
 wandb/
 mlruns/
+
+# Notebooks
+notebooks/*.gif
 
 # Logs
 *.log
