--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ dmypy.json
 *.safetensors
 wandb/
 mlruns/
+data/
 
 # Notebooks
 notebooks/*.gif
@@ -79,4 +80,3 @@ notebooks/*.gif
 
 # OS
 Thumbs.db
-
